--- a/Tribbum/package.json
+++ b/Tribbum/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-with-emulator": "concurrently \"firebase emulators:start --project=development\" \"wait-on tcp:4000 && cd firestore-seeder && node seed.js\" \"wait-on tcp:4000 && next dev\""
   },
   "dependencies": {
     "@react-email/render": "0.0.9",
@@ -15,17 +16,19 @@
     "date-fns": "^3.0.6",
     "encoding": "^0.1.13",
     "firebase": "^10.9.0",
-    "next": "^14.1.4",
+    "next": "^14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "^14.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "wait-on": "^7.2.0"
   },
   "overrides": {
     "@react-email/render": "0.0.9"
