--- a/Tribbum/package.json
+++ b/Tribbum/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.0.6",
     "encoding": "^0.1.13",
     "firebase": "^10.9.0",
+    "firebase-admin": "^12.1.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
