Allowed firestore rules to be committed to github

--- a/Tribbum/.gitignore
+++ b/Tribbum/.gitignore
@@ -37,6 +37,6 @@ next-env.d.ts
 
 # Firebase emulator files
 firestore-debug.log
-firestore.rules
+# firestore.rules
 firebase-debug.log
 ui-debug.log
