--- a/Tribbum/firebase.json
+++ b/Tribbum/firebase.json
@@ -1,10 +1,10 @@
 {
   "firestore": {
-    "rules": "firestore.rules",
+    "rules": "firebase/rules/firestore.rules",
     "project": "development"
   },
   "storage": {
-    "rules": "storage.rules",
+    "rules": "firebase/rules/storage.rules",
     "project": "development"
   },
   "emulators": {
