--- a/Tribbum/firebase.json
+++ b/Tribbum/firebase.json
@@ -1,6 +1,6 @@
 {
   "firestore": {
-    "rules": "firebase/rules/firestore.rules",
+    "rules": "firebase/firestore.rules",
     "project": "development"
   },
   "storage": {
