--- a/Tribbum/package.json
+++ b/Tribbum/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.9.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.5"
   },
