--- a/Tribbum/firebase.json
+++ b/Tribbum/firebase.json
@@ -1,11 +1,9 @@
 {
   "firestore": {
-    "rules": "firebase/firestore.rules",
-    "project": "development"
+    "rules": "firebase/firestore.rules"
   },
   "storage": {
-    "rules": "firebase/rules/storage.rules",
-    "project": "development"
+    "rules": "firebase/rules/storage.rules"
   },
   "emulators": {
     "ui": {
@@ -17,6 +15,9 @@
     },
     "storage": {
       "port": 9199
+    },
+    "auth": {
+      "port": 9099
     }
   }
 }
